<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:hint="Введите имя персонажа"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hello">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/hello"
        style="@style/MyTextViewTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/my_text_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CalendarView
        android:id="@+id/my_calendar"
        android:layout_width="320dp"
        android:layout_height="300dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="190dp"
        android:background="@color/calendar_yellow"
        android:dateTextAppearance="@style/TextAppearance.AppCompat.Body1"
        android:firstDayOfWeek="@integer/material_motion_duration_long_1"
        app:layout_constraintBottom_toTopOf="@id/left_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textFieldUp" />


    <Button
        android:id="@+id/left_button"
        style="@style/MyLeftButtonTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/left_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/right_button"
        style="@style/MyButtonTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/right_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="110dp"
        android:text="@string/left_chip"
        app:layout_constraintBottom_toTopOf="@id/left_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_calendar" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_centre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="110dp"
        android:text="@string/center_chip"
        app:layout_constraintBottom_toTopOf="@id/left_button"
        app:layout_constraintEnd_toStartOf="@id/chip_right"
        app:layout_constraintStart_toEndOf="@id/chip_left"
        app:layout_constraintTop_toBottomOf="@id/my_calendar" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="110dp"
        android:text="@string/right_chip"
        app:layout_constraintBottom_toTopOf="@id/right_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/chip_centre"
        app:layout_constraintTop_toBottomOf="@id/my_calendar" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_left_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/left_down_chip"
        app:layout_constraintBottom_toTopOf="@id/chip_down"
        app:layout_constraintEnd_toStartOf="@id/chip_right_down"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chip_left" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_right_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/right_down_chip"
        app:layout_constraintBottom_toTopOf="@id/chip_down"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/chip_left_down"
        app:layout_constraintTop_toBottomOf="@id/chip_right" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/down_chip"
        app:layout_constraintBottom_toTopOf="@id/right_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chip_right_down" />

</androidx.constraintlayout.widget.ConstraintLayout>